--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.309.0",
-    "next": "^16.1.1-canary.7",
+    "next": "14.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
